--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Interactive News Medium (testing)",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error no test specified\" && exit 1",
+    "start": "node index.js --omit=dev"
   },
   "author": "Beam Wares LTD",
   "license": "ISC",
